# learning-sandbox

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  dataset.hpp  deskew.cpp  get-mnist.sh  loadCIFAR10.hpp  loadMNIST.hpp  loadweights.cpp  loadweights.hpp  mnist-flex.cpp  mnist-static.cpp  montagelist.hpp  options.cpp  options.hpp
src/: CMakeLists.txt  loadMNIST.hpp  loadweights.cpp  mnist-flex.cpp  mnist-static.cpp  montagelist.hpp  options.cpp
